# Absent_Catcher

./: .gitignore  Dockerfile  Mac address (Room 604)  README.md  attendance.db  docker-compose.yaml  pyproject-docker.toml  pyproject.toml  pyrightconfig.json  requirements.txt
proposal/: Tommy's Idea.txt
src/: server.py
src/client/: client.py  main.py
src/server/: main.py
src/server/constant/: database.py  valid_ap_macs.py
src/server/router/: app_router.py
src/server/router/dto/attendance/: request.py  response.py
